--- a/Front-end/Layout/Calendario.razor
+++ b/Front-end/Layout/Calendario.razor
@@ -53,38 +53,48 @@
     </div>
 
     <div class="horizontal-bar final-calendario"></div>
-
     @if (Navigation.ToBaseRelativePath(Navigation.Uri) == "inicio")
     {
-    <div class="agendar-relatar">
-        <a href="/agenda" style="cursor: pointer;">
-            <svg width="1.5rem" height="1.5rem" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M19 4H5C3.89543 4 3 4.89543 3 6V20C3 21.1046 3.89543 22 5 22H19C20.1046 22 21 21.1046 21 20V6C21 4.89543 20.1046 4 19 4Z" stroke="#FAF9F6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M16 2V6" stroke="#FAF9F6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M8 2V6" stroke="#FAF9F6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M3 10H21" stroke="#FAF9F6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M8 14H8.01" stroke="#FAF9F6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M12 14H12.01" stroke="#FAF9F6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M16 14H16.01" stroke="#FAF9F6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M8 18H8.01" stroke="#FAF9F6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M12 18H12.01" stroke="#FAF9F6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M16 18H16.01" stroke="#FAF9F6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>
-        </a>
-
-        <svg width="1.5rem" height="1.5rem" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2Z" stroke="#FAF9F6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-            <path d="M12 16V12" stroke="#FAF9F6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-            <path d="M12 8H11.99" stroke="#FAF9F6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-        </svg>
-    </div>
+        <div class="agendar-relatar">
+            @if(legenda){
+                <div class="legenda-calendario">
+                    <div style="display: flex; align-items: center; padding-left: 15px;">
+                        <div class="legenda-cor" style="background-color: #ABC8E2;"></div>
+                        <span>Hoje</span>
+                    </div>
+                    <div style="display: flex; align-items: center; padding-right: 15px;">
+                        <div class="legenda-cor" style="background-color: #D9D9D9;"></div>
+                        <span>Agendamento</span>
+                    </div>
+                </div>
+                
+            } else{
+                <a href="/agenda" style="cursor: pointer;">
+                    <svg width="1.5rem" height="1.5rem" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M19 4H5C3.89543 4 3 4.89543 3 6V20C3 21.1046 3.89543 22 5 22H19C20.1046 22 21 21.1046 21 20V6C21 4.89543 20.1046 4 19 4Z" stroke="#FAF9F6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M16 2V6" stroke="#FAF9F6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M8 2V6" stroke="#FAF9F6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M3 10H21" stroke="#FAF9F6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M8 14H8.01" stroke="#FAF9F6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M12 14H12.01" stroke="#FAF9F6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M16 14H16.01" stroke="#FAF9F6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M8 18H8.01" stroke="#FAF9F6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M12 18H12.01" stroke="#FAF9F6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M16 18H16.01" stroke="#FAF9F6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </a>                
+            }
+                <svg width="1.5rem" height="1.5rem" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" @onclick="mostrarLegenda" style="cursor: pointer; margin-left: 10px;">
+                    <path d="M12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2Z" stroke="#FAF9F6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M12 16V12" stroke="#FAF9F6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M12 8H11.99" stroke="#FAF9F6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+        </div>
     } else if(Navigation.ToBaseRelativePath(Navigation.Uri) == "agenda")
     {
         @if(compromissosSemanais != null){
             @for (int i = 0; i < Math.Min(compromissosSemanais.Count, 4); i++)
             {
-                Console.WriteLine(compromissosSemanais[i].Data.Date);
-                Console.WriteLine(DataAtual);
                 var cor= "";
                 @if(compromissosSemanais[i].Servico == "Psicóloga" || compromissosSemanais[i].Servico == "Psicólogo" || compromissosSemanais[i].Servico == "Psicóloga(o)" || compromissosSemanais[i].Servico == "Psicólogo(a)"){
                     cor = "#F884D7";
@@ -131,6 +141,7 @@
 
     private List<CompromissoModel> compromissos;
     private List<CompromissoModel> compromissosSemanais;
+
 
     protected override async Task OnInitializedAsync()
     {
@@ -201,6 +212,12 @@
     {
         DataAtual = DataAtual.AddMonths(meses);
         GerarCalendario(DataAtual);
+    }
+
+    private bool legenda = false;
+    private void mostrarLegenda()
+    {
+        legenda = !legenda;
     }
 }
 
@@ -274,6 +291,8 @@
         bottom: 20px;
         text-align: right;
         align-content: end;
+        justify-content: flex-end;
+        display: flex;
     }
 
     .final-calendario{
@@ -286,6 +305,24 @@
 
     .agendar-relatar > svg{
         margin: 0px 5px;
+    }
+
+    .legenda-calendario{
+        width: 9.5rem;
+        height: 1.5rem;
+        display: flex;
+        justify-content: space-between;
+        color: var(--blue-ufersa);
+        background-color: #FAF9F6;
+        font-size: 0.5rem;
+        border-radius: 4px;
+    }
+
+    .legenda-cor{
+        width: 0.5rem;
+        height: 0.5rem;
+        border-radius: 50%;
+        margin-right: 8px;
     }
 
 </style>
