--- a/Front-end/Layout/NavMenu.razor
+++ b/Front-end/Layout/NavMenu.razor
@@ -2,13 +2,16 @@
 @inject ILocalStorageService localStorage
 @inject NavigationManager Navigation
 @inject AuthenticationStateProvider AuthenticationStateProvider
+@inject DiscenteService DiscenteService
 
 <div style="background-color: var(--blue-ufersa); width: 22rem; height: auto; min-height: 100vh; position: relative;">
     <div style="padding-left: 55px;" class="pt-5 pb-4">
         <img class="nav-img" src="..\\css\\images\\img-perfil-padrao.svg" alt="">
+        @if(discente != null){
+            <p class="weight-500" style="font-size: 0.75rem; color: var(--black-gray); margin: 5px 0px;">Olá,</p>
+            <h1 class="weight-700" style="font-size: 1.375rem; color: white; text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); width: 6.563rem;">@discente.Nome</h1>
 
-        <p class="weight-500" style="font-size: 0.75rem; color: var(--black-gray); margin: 5px 0px;">Olá,</p>
-        <h1 class="weight-700" style="font-size: 1.375rem; color: white; text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);">Eriky <br> Veloso</h1>
+        }
     </div>
     
     <div class="@NavMenuCssClass nav-scrollable" style="height: auto;" @onclick="ToggleNavMenu">
@@ -102,6 +105,19 @@
 </div>
 
 @code {
+    private DiscenteRegistroModel discente;
+
+    protected override async Task OnInitializedAsync()
+    {
+        // Obtenha o ID do usuário do localStorage usando o CustomAuthStateProvider
+        int userId = await ((CustomAuthStateProvider)AuthenticationStateProvider).GetUserIdFromLocalStorage();
+
+        if (userId != -1)
+        {
+            // Chame o método GetDiscente e armazene o resultado
+            discente = await DiscenteService.GetDiscente(userId); 
+        }
+    }
     private bool collapseNavMenu = true;
 
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
