<feat>: redirecionamento para reservas

--- a/Front-end/Pages/Inicio.razor
+++ b/Front-end/Pages/Inicio.razor
@@ -27,7 +27,7 @@
                             <p class="paragraph-size weight-500" style="color: var(--white); width: 90%;">Bem-vindo(a) à plataforma de agendamento de serviços. Utilize o botão abaixo para começar.</p>
 
                             <div class="d-grid gap-2 py-2">
-                                <a href="/agenda" class="btn btn-secondary weight-700 border-radius-30 paragraph-size" style="display: flex; align-items: center; justify-content: center; height: 3rem; align-items: center; width: 50%">Agendar</a>
+                                <a href="/reserva" class="btn btn-secondary weight-700 border-radius-30 paragraph-size" style="display: flex; align-items: center; justify-content: center; height: 3rem; align-items: center; width: 50%">Agendar</a>
                             </div>
                         </div>
 
