--- a/Front-end/Pages/Inicio.razor
+++ b/Front-end/Pages/Inicio.razor
@@ -135,7 +135,7 @@
 
         int userId = await ((CustomAuthStateProvider)AuthenticationStateProvider).GetUserIdFromLocalStorage();
         if(userId != -1){
-            compromissos = await AgendamentoService.GetCompromissosDiscente(userId);
+            compromissos = await AgendamentoService.GetCompromissosDiscente(userId, DateTime.Today);
         }
     }
 
