--- a/Front-end/Layout/CalendarioSemanal.razor
+++ b/Front-end/Layout/CalendarioSemanal.razor
@@ -64,11 +64,44 @@
     public EventCallback<DateTime> OnDiaSelecionadoChange { get; set; }
     private List<DateTime> WeekDays { get; set; } = new List<DateTime>();
 
-    protected override void OnParametersSet()
+    protected override async Task OnParametersSetAsync()
     {
+        pink = new List<string> { "#F884D780", "#A85891", "#F884D7" };
+        green = new List<string> { "#D6F89480", "#9EB570", "#D6F894" };
+        orange = new List<string> { "#F6C4AF80", "#A58273", "#F6C4AF" };
+        blue = new List<string> { "#95BBF880", "#5E77A0", "#95BBF8" };
+
         WeekDays = Enumerable.Range(0, 7)
-            .Select(i => DiaSelecionado.AddDays(i - (int)DiaSelecionado.DayOfWeek))
-            .ToList();
+        .Select(i => DiaSelecionado.AddDays(i - (int)DiaSelecionado.DayOfWeek))
+        .ToList();
+
+
+        int userId = await ((CustomAuthStateProvider)AuthenticationStateProvider).GetUserIdFromLocalStorage();
+        if(userId != -1){
+            compromissos = await AgendamentoService.GetCompromissosDiscenteSemanaAtual(userId, DiaSelecionado);
+        }
+
+        if (compromissos != null && compromissos.Count > 0){
+            foreach(var compromisso in compromissos){
+                TimeSpan hora = @compromisso.HoraInicio;
+                string horaFormatada = (hora.Hours % 12).ToString("D2") + ":" + hora.Minutes.ToString("D2") + " " + (hora.Hours >= 12 ? "PM" : "AM");
+                List<string> colors = new List<string>();
+
+                if(compromisso.Servico == "Psicóloga" || compromisso.Servico == "Psicólogo" || compromisso.Servico == "Psicóloga(o)" || compromisso.Servico == "Psicólogo(a)"){
+                    colors = new List<string> (pink);
+                } else if(compromisso.Servico == "Pedagoga" || compromisso.Servico == "Pedagogo" || compromisso.Servico == "Pedagoga(o)" || compromisso.Servico == "Pedagogo(a)"){
+                    colors = new List<string> (blue);
+                } else if(compromisso.Servico == "Nutricionista"){
+                    colors = new List<string> (green);
+                } else if(compromisso.Servico == "Educador Físico" || compromisso.Servico == "Educadora Física"){
+                    colors = new List<string> (orange);
+                }
+
+                var evento = new EventItem { Day = compromisso.Data, Time = horaFormatada, Title = compromisso.Servico, Person = compromisso.Profissional_Nome, Colors = colors };
+                Events.Add(evento);
+            }
+
+        }
     }
 
     private List<string> TimeSlots = new() { "07:00 AM", "08:00 AM", "09:00 AM", "10:00 AM", "11:00 AM", "12:00 AM", "01:00 PM", "02:00 PM", "03:00 PM", "04:00 PM", "05:00 PM", "06:00 PM", "07:00 PM", "08:00 PM", "09:00 PM", "10:00 PM" };
@@ -91,7 +124,7 @@
 
         int userId = await ((CustomAuthStateProvider)AuthenticationStateProvider).GetUserIdFromLocalStorage();
         if(userId != -1){
-            compromissos = await AgendamentoService.GetCompromissosDiscenteSemanaAtual(userId);
+            compromissos = await AgendamentoService.GetCompromissosDiscenteSemanaAtual(userId, DiaSelecionado);
         }
 
         if (compromissos != null && compromissos.Count > 0){
